# zarf

./: .editorconfig  .env.example  .geminiignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  FE_DEV.md  README.md  SECURITY.md  fe_new.md  issue_fixer.md  rust-toolchain.toml  rustfmt.toml  whitelist.sample.csv  whitelist2 copy.csv  whitelist2.csv  whitelist_sample.csv  wrangler.jsonc
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml
circuits/: Nargo.toml
circuits/src/: main.nr
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol  DeployFactory.s.sol  DeployTestToken.s.sol  DeployVesting.s.sol  Setup.s.sol  SetupSepolia.s.sol  TestClaim.s.sol
contracts/solidity/: foundry.toml
contracts/solidity/script/: DeployFactory.s.sol  DeployTestToken.s.sol  DeployVesting.s.sol  RegisterGoogleJWK.s.sol
contracts/solidity/test/: ZarfVestingFactory.t.sol
contracts/soroban/verifier/: .gitignore  Cargo.toml  README.md
contracts/soroban/verifier/scripts/: run_localnet_e2e.sh
contracts/soroban/verifier/scripts/invoke_ultrahonk/: package-lock.json
contracts/soroban/verifier/scripts/measure_ultrahonk_costs/: package-lock.json
contracts/soroban/verifier/src/: lib.rs
contracts/soroban/verifier/test_snapshots/: cost_fib.1.json  cost_simple.1.json  cost_zarf_bb_v2.1.json  verify_simple_circuit_proof_succeeds.1.json
contracts/soroban/verifier/tests/: cost_measure.rs  integration_tests.rs
contracts/soroban/verifier/tests/zarf/: vk_hash.hex
contracts/soroban/verifier/ultrahonk-soroban-verifier/: .gitignore  Cargo.toml  README.md
contracts/soroban/verifier/ultrahonk-soroban-verifier/src/: debug.rs  ec.rs  field.rs  lib.rs  relations.rs  shplemini.rs  transcript.rs  types.rs  utils.rs  verifier.rs
contracts/soroban/verifier/ultrahonk-soroban-verifier/tests/: adversarial_test.rs  verifier_test.rs
contracts/soroban/zarf/: README.md
contracts/soroban/zarf/airdrop/: Cargo.toml
contracts/soroban/zarf/airdrop-factory/: Cargo.toml
contracts/soroban/zarf/airdrop-factory/src/: lib.rs
contracts/soroban/zarf/airdrop-factory/tests/: factory.rs
contracts/soroban/zarf/airdrop/src/: lib.rs
contracts/soroban/zarf/airdrop/tests/: airdrop.rs  merkle_vectors.rs
contracts/soroban/zarf/factory/: Cargo.toml
contracts/soroban/zarf/factory/src/: lib.rs
contracts/soroban/zarf/factory/test_snapshots/: create_and_fund_vesting_consumes_factory_allowance.1.json  creates_vesting_and_tracks_metadata.1.json
contracts/soroban/zarf/factory/tests/: factory.rs
contracts/soroban/zarf/vesting/: Cargo.toml
contracts/soroban/zarf/vesting/src/: lib.rs
contracts/soroban/zarf/vesting/test_snapshots/: claim_checks_registry_root_recipient_time_and_transfers.1.json  real_zarf_proof_claims_through_real_ultrahonk_verifier.1.json
contracts/soroban/zarf/vesting/tests/: real_zarf_claim.rs  vesting.rs
contracts/soroban/zarf/vesting/tests/fixtures/zarf-stellar-recipient/: metadata.json  proof  public_inputs  vk  vk_hash  vk_hash.hex
contracts/src/: HonkVerifier.sol  JWKRegistry.sol  MockHonkVerifier.sol  MockVerifier.sol  TestToken.sol  ZarfVesting.sol  ZarfVestingFactory.sol
contracts/src/interfaces/: IVerifier.sol
contracts/test/: ZarfVesting.t.sol  ZarfVesting.t.sol.deprecated  ZarfVestingFactory.t.sol  ZarfVestingFactory.t.sol.deprecated  ZarfVestingIntegration.t.sol
contracts/test/fixtures/: testProof.json
contracts/test/mocks/: MockERC20.sol
docs/: airdrop-integration-similarity-report.md  branch-correctness-audit-2026-06-13.md  ci-cd-status-2026-06-13.md  fix-plan-adversarial-vetted-2026-06-13.md
docs/adr/: 0001-unsalted-email-hashes-accepted-risk.md  0002-non-zk-ultrahonk-flavor.md
docs/review-2026-06-13/: 00-findings-ledger.md  01-executive-summary.md
docs/runbooks/: circuit-defense-in-depth-batch.md  circuit-redeploy-cutover.md  incident-response.md  pinata-recovery.md  soroban-upgradeability-plan.md
plans/airdrop_tool/: 01-threat-model-security.md  02-contract-spec.md  03-stellar-soroban-deep.md  04-standards-sep-alignment.md  05-economics-cost-model.md  06-testing-verification.md  07-ui-ux.md  08-operations-runbook.md  09-merkle-data-contract.md  10-indexer-data-model.md  README.md  REVIEW-stellar-skills.md  airdrop-tool-design.md
poc/: index.html  package.json  pnpm-lock.yaml  vite.config.js
poc/scripts/: copy-wasm.js  generateTestProof.js  generateVerifier.js  generateZarfProofForStellar.js  jwkToLimbs.js
poc/src/: App.svelte
poc/src/lib/: contracts.js  csvProcessor.js  googleAuth.js  jwtProver.js  merkleTree.js  pinoShim.js  wallet.js
video/: .gitignore  package-lock.json  package.json  remotion.config.ts  tsconfig.json
video/src/: Root.tsx
video/src/components/: Animated.tsx  AnimatedText.tsx  BeatPulse.tsx  CameraMotion.tsx  FingerprintRipples.tsx  GlowBurst.tsx  GrainOverlay.tsx  ParticleSystem.tsx  ZarfLogo.tsx  index.ts
video/src/compositions/: LaunchVideo.tsx
video/src/lib/: easings.ts  fonts.ts  schemas.ts  tokens.ts
video/src/scenes/: 01-OpeningHeadline.tsx  01-Void.tsx  02-Fingerprint.tsx  02-Flow.tsx  03-BoltAndName.tsx  03-UseCases.tsx  04-CreateClaimSplit.tsx  04-Flow.tsx  05-HashGrid.tsx  05-Headline.tsx  index.ts  (+6 more)
web/: .env.example  .gitignore  .prettierignore  .prettierrc  README.md  ROADMAP.md  __backlogs_index.md  dev-all.sh  eslint.config.js  overanalysis_report.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/_backlogs/: 001-project-foundation.md  002-core-ui-components.md  003-utility-migration.md  004-state-stores.md  005-landing-page.md  006-wizard-3-column-layout.md  006-wizard-foundation.md  007-multi-distribution-flow.md  __backlog_template.md  __backlogs_index.md
web/scripts/: analyze-routes.mjs  check-any-allow-list.mjs  check-bundle-budget.mjs  check-console-allow-list.mjs  check-merkle-vectors.mjs  check-type-forks.mjs  deploy_demo_airdrop.ts  deploy_demo_distribution.ts  reconstruct_distribution.ts  sanitize_distribution.js  smoke-routes.sh  verify_pin.ts
web/src/: app.css  app.d.ts  app.html  hooks.server.ts
zarf/: Nargo.toml
(+434 files in other folders)
