[package]
name = "ultrahonk_soroban_verifier"
version = "0.1.0"
edition = "2021"

license     = "MIT"
description = "Rust verifier for UltraHonk proofs"
repository  = "https://github.com/yugocabrio/rs-soroban-ultrahonk"

[dependencies]

ark-ff = { version = "0.5", default-features = false }
ark-bn254 = { version = "0.5", default-features = false, features = ["curve"] }

hex = { version = "0.4", default-features = false, features = ["alloc"] }

lazy_static = { version = "1.4", optional = true }
once_cell = { version = "1.19", default-features = false, features = ["alloc", "race"] }
soroban-sdk = { version = "26.1.0", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "26.1.0", default-features = false, features = ["testutils"] }

# Vendored verbatim from upstream (yugocabrio/rs-soroban-ultrahonk); these are
# upstream-parity / churn lints, not defects. NOTE: `deprecated` is a rustc
# lint (soroban-sdk renamed bn254::Fr -> Bn254Fr), so it MUST live under
# [lints.rust] — putting it under [lints.clippy] errors with E0602.
[lints.rust]
deprecated = "allow"

[lints.clippy]
should_implement_trait = "allow" # Fr::from_str is a named constructor on a foreign type
needless_range_loop = "allow"    # index-writes into fixed-size [Fr; N] in MSM/transcript hot paths
manual_is_multiple_of = "allow"  # `len % 32 != 0` reads as a 32-byte alignment check

[features]
default = ["alloc"]
std = [
    "ark-ff/std",
    "ark-bn254/std",
    "hex/std",
    "lazy_static",
    "once_cell/std"
]
trace = []

alloc = [
    "hex/alloc",
    "once_cell/alloc",
]
