[package]
name = "zarf-airdrop-soroban"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "26.0.0-rc.1", default-features = false, features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "26.0.0-rc.1", default-features = false, features = ["alloc", "testutils"] }
# Test-only: generate + parse the canonical Rust<->JS merkle-vectors.json fixture.
# Dev-dependency only — does NOT affect the wasm32v1-none cdylib build.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true

[lints.clippy]
# Soroban contract constructors/methods legitimately take many config args.
too_many_arguments = "allow"
