[package]
name = "zarf-airdrop-soroban"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "26.1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "26.1.0", default-features = false, features = ["alloc", "testutils"] }
# Runtime TypeScript -> actual-contract interoperability bundle. Test-only;
# these dependencies do not affect the wasm32v1-none contract.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# M8 T3: property-based tests (P1-P5, doc 06 §6). Dev-only; not in the wasm cdylib.
proptest = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true

[lints.clippy]
# Soroban contract constructors/methods legitimately take many config args.
too_many_arguments = "allow"
